K8S/commandservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: commandservice-depl    
spec:
    replicas: 1
    selector:
        matchLabels:
            app: commandservice
    template:
        metadata:
            labels:
                app: commandservice
        spec:
            containers:
            -   name: commandservice
                image: anderson954/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
    name: commands-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: commandservice
    ports:
    -   name: commandservice
        protocol: TCP
        port: 80
        targetPort: 8080
