K8S/platformnp-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnp-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 8080
