K8S/platformservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: platformservice-depl    
spec:
    replicas: 1
    selector:
        matchLabels:
            app: platformservice
    template:
        metadata:
            labels:
                app: platformservice
        spec:
            containers:
            -   name: platformservice
                image: anderson954/platformservice:latest
                resources:
                    requests:
                        cpu: 100m
                        memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
    name: platforms-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: platformservice
    ports:
    -   name: platformservice
        protocol: TCP
        port: 80
        targetPort: 8080
    -   name: grpc
        protocol: TCP
        port: 666
        targetPort: 666
