K8S/postgres-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-plat-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-plat
  template:
    metadata:
      labels:
        app: postgres-plat
    spec:
      containers:
      - name: postgres-plat
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresdb
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
          claimName: postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-plat-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: postgres-plat
  ports:
  - name: postgres-plat
    protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-plat-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: postgres-plat
  ports:
  - name: postgres-plat
    protocol: TCP
    port: 5432
    targetPort: 5432
