K8S/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4.1-management
        ports:
        - containerPort: 15672
          name: rabbit-mgt-port
        - containerPort: 5672
          name: rabbit-msg-port 
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: rabbit-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
  - name: rabbit-mgt-port
    protocol: TCP
    port: 80
    targetPort: 15672
